fixed connected sites list spacings

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -66,7 +66,7 @@
   .v-radio {
     &:not(:last-child) {
       border-bottom: solid 1px #eeeeee;
-      margin-bottom: 10px;
+      margin-bottom: 10px !important;
       padding-bottom: 6px;
     }
     .v-input--selection-controls__ripple {
@@ -358,13 +358,13 @@
         color: #d8d8d8;
       }
     }
-    &.inverted-colors {
-      background-color: #009fb1;
-      .v-btn__content {
-        color: #ffffff;
-        font-weight: normal;
-      }
-    }
+    // &.inverted-colors {
+    //   background-color: #009fb1;
+    //   .v-btn__content {
+    //     color: #ffffff;
+    //     font-weight: normal;
+    //   }
+    // }
     &.float {
       position: absolute;
       bottom: 12px;
